cluster/apps/external/metube/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app metube-ui
  namespace: external
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: "traefik"
  rules:
    - host: &host metube.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: metube
                port:
                  number: 80
  tls:
    - hosts:
        - metube.${SECRET_DOMAIN}
      secretName: metube-tls
